--- a/public/front_assets/css/style-new.css
+++ b/public/front_assets/css/style-new.css
@@ -695,19 +695,19 @@ h2.main-cat-title-inner {
     margin-right: 5px;
 }
 
-.sidebar form {
+.sidebar .search_panel {
     display: flex;
     width: 100%;
     padding: 20px;
 }
-.sidebar form input {
-    width: 70%;
+.sidebar #searchInput {
+    width: 100%;
     border: 2px solid #eaebed;
     border-radius: 5px 0px 0px 5px;
     height: 50px;
     padding: 10px;
 }
-.sidebar form button{
+.sidebar .searchButton{
     background: #0163d3;
     color: #fff;
     border: none;
